--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ body {
 }
 
 .card__hero-img {
-  width: 28.125rem;
+  width: 100%;
   height: auto;
 }
 
@@ -127,8 +127,9 @@ body {
 }
 
 .plan__music-icon {
-  width: 3rem;
-  height: 3rem;
+  max-width: 3rem;
+  width: 100%;
+  height: auto;
 }
 
 .plan {
